package gameLaby.laby;

public interface Intelligence {
    String NULLE="nulle";
    String FAIBLE="faible";
    String MOYENNE="moyenne";
    String INTELLIGENT="intelligent";
    String[] intelligence={NULLE,FAIBLE,MOYENNE,INTELLIGENT};
}
